My_Workspace/Host/.metadata/.plugins/org.eclipse.cdt.ui/math.build.log
11:40:32 **** Rebuild of configuration Debug for project math ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:14:2: warning: implicit declaration of function 'prinrf'; did you mean 'printf'? [-Wimplicit-function-declaration]
   14 |  prinrf("Add: %d\n", math_add(9,3));
      |  ^~~~~~
      |  printf
..\main.c:14:22: warning: implicit declaration of function 'math_add' [-Wimplicit-function-declaration]
   14 |  prinrf("Add: %d\n", math_add(9,3));
      |                      ^~~~~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o math.o "..\\math.c" 
..\math.c:12:1: error: expected identifier or '(' before '{' token
   12 | {
      | ^
..\math.c:18:1: error: expected identifier or '(' before '{' token
   18 | {
      | ^
..\math.c:26:1: error: expected identifier or '(' before '{' token
   26 | {
      | ^
..\math.c:34:1: error: expected identifier or '(' before '{' token
   34 | {
      | ^

11:40:33 Build Failed. 4 errors, 2 warnings. (took 829ms)

